# rank-choice-analysis

./: .coverage  .flake8  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CLAUDE.md  Makefile  PROGRESS.md  README.md  TEST_COVERAGE_STRATEGY.md  detailed_verification.txt  pyproject.toml  requirements.txt  start  verification_report_pyrankvote.txt
.claude/test_coordination/: IMPROVED_APPROACH.md  README.md  TEST_RESULTS.md  ping.json  ping_template.json  pong_template.json  primary_coordinator.sh  secondary_coordinator.sh  secondary_instructions.md  status_primary.json  status_secondary.json  test_log.txt  test_pong.json
data/elections/2024_portland_district2/: metadata.json
data/elections/2024_portland_district2/static_responses/: candidates_enhanced.json  coalition_types.json  network_stats.json
docs/: README.md  coalition-analysis-enhancements.md  data-processing.md  enhanced-coalition-analysis-plan.md  performance-issues-phase1.md  performance-issues-phase2.md  performance-issues-phase3.md  performance-optimization-strategy.md  stv-analysis.md  web-interface.md
scripts/: pre_commit_hooks.py  precompute_data.py  process_data.py  run_stv.py  start_server.py  test_pipeline.py  test_pyrankvote.py  verify_results.py
sql/: 01_load_data.sql  02_create_metadata.sql  04_basic_analysis.sql  05_candidate_analysis.sql
src/analysis/: __init__.py  candidate_metrics.py  coalition.py  stv.py  stv_pyrankvote.py  verification.py
src/data/: cvr_parser.py  database.py
src/web/: main.py
src/web/templates/: base.html  candidates.html  coalition.html  dashboard.html  error.html  setup.html  vote_flow.html
tests/: __init__.py  conftest.py  test_pyrankvote_compatibility.py  test_stv_implementations.py  test_stv_interface.py  test_web_basic.py
tests/golden/: __init__.py  test_micro_datasets.py
tests/golden/micro/: clear_winner.json  heavy_truncation.json  hub_candidate.json
tests/integration/: __init__.py  test_critical_paths.py  test_database_robustness.py
tests/performance/: __init__.py
tests/unit/: __init__.py  test_candidate_metrics.py  test_coalition.py  test_coalition_math.py  test_coalition_mathematical_consistency.py  test_configuration.py  test_cvr_parser.py  test_database_advanced.py  test_database_basic.py  test_database_read.py  test_database_write.py  test_imports.py  test_stv_math.py  test_verification.py  test_web_api.py
