[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ranked-elections-analyzer"
version = "0.1.0"
description = "Portland STV Election Analysis Platform"
authors = [{name = "Ranked Elections Analyzer"}]
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.115.6",
    "uvicorn[standard]>=0.32.1",
    "duckdb>=1.1.3",
    "pandas>=2.2.3",
    "numpy>=2.1.3",
    "plotly>=5.24.1",
    "pydantic>=2.10.3",
    "jinja2>=3.1.4",
    "python-multipart>=0.0.17",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "black>=24.10.0",
    "isort>=5.13.2",
]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 88