[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ranked-elections-analyzer"
version = "0.1.0"
description = "Portland STV Election Analysis Platform"
authors = [{name = "Ranked Elections Analyzer"}]
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.115.6",
    "uvicorn[standard]>=0.32.1",
    "duckdb>=1.1.3",
    "pandas>=2.2.3",
    "numpy>=2.1.3",
    "plotly>=5.24.1",
    "pydantic>=2.10.3",
    "jinja2>=3.1.4",
    "python-multipart>=0.0.17",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "black>=24.10.0",
    "isort>=5.13.2",
    "pre-commit>=4.0.1",
    "flake8>=7.1.1",
    "bandit>=1.7.10",
]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 88

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101", "B608", "B108", "B104"]  # Skip assert_used, SQL injection warnings (false positives with integer IDs), temp dir usage, bind all interfaces

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "unit: marks tests as unit tests (fast, no external dependencies)",
    "integration: marks tests as integration tests (medium speed, database required)",
    "golden: marks tests as golden dataset validation (slow, full verification)",
    "invariant: marks tests as mathematical invariant validation",
    "smoke: marks tests as smoke tests (basic functionality check)"
]
